Fix List with dates is not centered

--- a/frontend/packages/kitconcept-intranet/src/theme/components/_eventsList.scss
+++ b/frontend/packages/kitconcept-intranet/src/theme/components/_eventsList.scss
@@ -1,4 +1,4 @@
-.event-calendar {
+.block.listing.listDate .event-calendar.items {
   @include default-container-width();
   @include adjustMarginsToContainer($default-container-width);
 
